# Optimal-Site-Selection

./: .gitignore  README.md  main.py  pyproject.toml
claudedocs/: CONTRACT_rust_python.md  eda_파생변수_심화_20260619.md  research_strengths_literature_20260619.md  research_방향검토_계층vsFiLM_20260619.md  research_중첩계층조건부분할_20260619.md  기획서_ablation_설비원인검증_20260619.md  기획서_phase3_토지피복_조건부노출_20260619.md  기획서_phase5_사후분포_커버리지_20260619.md  기획서_전주산불위험_조기경보_20260618.md  활용방안_시각자료_20260619.md
exposure_v2/: README.md  integrate_v2blend.py  make_flagship_fig.py  proto_v0_dose.py  proto_v0_fulln_cv.py  proto_v1_ellipse.py  proto_v2_confirm.py
notebooks/: EDA_derived.ipynb
outputs/: regime_threshold_analysis.json  tuned_weights.json
pfire/: __init__.py  ablation.py  calibrate.py  config.py  experts.py  exposure.py  exposure_engine.py  exposure_v2.py  fire_cause.py  geo.py  hazard.py  hierarchy.py  io.py  posterior.py  regimes.py  risk_index.py  submit.py  validate.py  weather.py
report/: README.md  formulas.tex  report.tex  report_full.tex  최종공모안.md  프로젝트_정리_5절.md
rust/pfire_kernels/: Cargo.toml  README.md  benchmark.py  pyproject.toml  validate.py
rust/pfire_kernels/src/: grid.rs  lib.rs
scripts/: eda_derived.py  make_figures.py  phase4_hierarchy_demo.py  prototype_landcover_signal.py  prototype_or_exposure.py  prototype_sgg_pooling.py  risk_percentile.py  run_ablation.py  run_ablation_by_cause.py  run_phase1_mvp.py  run_phase3.py  sweep_threshold_figs.py  tune_weights.py  validate_equipment_cause.py
scripts/experiments/: poc_lgcp.py  poc_lgcp_full.py
scripts/figures/: eda_4regime.py  (+4 more)
tests/: test_ablation.py  test_fire_cause.py  test_hierarchy.py  test_units.py
used_dataset/: README.md
(+6 files in other folders)
