[project]
name = "or-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
