[package]
name = "pfire_kernels"
version = "0.1.0"
edition = "2021"
description = "Performance-critical Monte-Carlo downwind wildfire spread kernels for the pfire risk model"
license = "MIT"

[lib]
name = "pfire_kernels"
# cdylib: required by PyO3 to build a Python extension module.
# rlib:   lets the kernel be reused from Rust integration tests / benches.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
